--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "name": "knapsack-problem",
     "version": "1.0.0",
     "author": "Andre Bryant",
-    "type": "module"
+    "type": "module",
+    "scripts": {
+      "start": "node ."
+    }
   }
